# platform

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  .gitlab-ci.yml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.txt
.devcontainer/aarch64-none-linux-gnu-gcc-13/: devcontainer.json
.devcontainer/aarch64-none-linux-gnu-gcc-15/: devcontainer.json
.devcontainer/arm-none-eabi-gcc-13/: devcontainer.json
.devcontainer/arm-none-eabi-gcc-15/: devcontainer.json
.devcontainer/clang-18/: devcontainer.json
.devcontainer/clang-22/: devcontainer.json
.devcontainer/gcc-13/: devcontainer.json
.devcontainer/gcc-15/: devcontainer.json
.github/actions/clang-format-run-action/: action.yml
.github/actions/clang-tidy-run-action/: action.yml
.github/actions/coverage-build/: action.yml
.github/actions/coverage-collect/: action.yml
.github/actions/coverage-report/: action.yml
.github/actions/cpp-coverage/collect/: action.yml
.github/actions/cpp-coverage/report/: action.yml
.github/actions/hello-world-bash/: action.yml
.github/templates/binary-run-action/: action.yml
.github/templates/build-cmake-preset-action/: action.yml
.github/workflows/: build-examples-baremetal.yml  build-examples-linux.yml  build-test-baremetal.yml  build-test-linux.yml  code-coverage.yml  distributed-coverage.yml  static-analysis.yml
.github/workflows/templates/build-cmake-preset-action/: action.yml
.gitlab/ci/: build-baremetal.yml  build-demo-baremetal.yml  build-demo-linux.yml  build-linux.yml  demo-linux.yml  deploy.yml  quality.yml  run-demo-baremetal.yml  run-demo-linux.yml  sanitizers-linux.yml
app/linux/: arm-linux-gnueabihf-clang-10.cmake  arm-linux-gnueabihf-clang-12.cmake  arm-linux-gnueabihf-clang-14.cmake  arm-linux-gnueabihf-clang-7.cmake  arm-linux-gnueabihf-clang-8.cmake  arm-linux-gnueabihf-clang-9.cmake  arm-linux-gnueabihf-gcc-11.cmake
cmake/: compilation-flags.cmake  components.cmake  conan.cmake  sanitizers.cmake
cmake/modules/: Findplatform-toolchain.cmake  Findplatform.cmake  Findstm32f4xx.cmake
cmake/presets/: app.json  baremetal.json  dependencies.json  linux.json  type.json
demo/: appMain.cpp  settings.cmake
demo/init/baremetal-arm/: CMakeLists.txt  platformInit.cpp
demo/init/freertos-arm/: CMakeLists.txt  platformInit.cpp
demo/init/linux/: init.cpp
docs/: requirements.md
examples/: CMakeLists.txt
examples/git-version/: CMakeLists.txt  main.cpp
examples/hello-world/: CMakeLists.txt  main.cpp
examples/init/baremetal-arm/: CMakeLists.txt  init.cpp  stm32f407vgtx.ld  stm32f4xx_hal_conf.h
examples/init/freertos-arm/: CMakeLists.txt  FreeRTOSConfig.h  init.cpp  stm32f4xx_hal_conf.h
examples/init/include/platform/: init.hpp
examples/init/linux/: init.cpp
examples/package-info/: CMakeLists.txt  main.cpp
examples/paths/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  platform.cmake
lib/baremetal-arm/: CMakeLists.txt  main.cpp  syscalls.cpp
lib/freertos-arm/: CMakeLists.txt
lib/linux/: CMakeLists.txt  aarch64-linux-gnu-gcc.cmake  aarch64-none-linux-gnu-clang-14.cmake  aarch64-none-linux-gnu-clang-18.cmake  aarch64-none-linux-gnu-clang.cmake  aarch64-none-linux-gnu-gcc.cmake  clang-14.cmake  clang-18.cmake  gcc-11.cmake  gcc-13.cmake  gcc.cmake
lib/main/: CMakeLists.txt
lib/main/baremetal-arm/: CMakeLists.txt  main.cpp  syscalls.cpp
lib/main/freertos-arm/: .clang-tidy  CMakeLists.txt  main.cpp  syscalls.cpp
lib/main/freertos-arm/freertos-10.2.1/: CMakeLists.txt
lib/main/freertos-arm/freertos-10.2.1/portable/ARM_CA53_64_BIT/: CMakeLists.txt
lib/main/freertos-arm/freertos-10.2.1/portable/ARM_CM33/secure/: CMakeLists.txt
lib/main/freertos-arm/freertos-10.2.1/portable/ARM_CM33_NTZ/non_secure/: CMakeLists.txt
lib/main/freertos-arm/freertos-10.2.1/portable/ARM_CM3_MPU/: CMakeLists.txt
lib/main/freertos-arm/freertos-10.2.1/portable/ARM_CM7/r0p1/: CMakeLists.txt
lib/main/include/platform/: main.hpp
lib/main/linux/: CMakeLists.txt  main.cpp  paths.cpp
lib/main/linux/include/platform/: paths.hpp
lib/package/: CMakeLists.txt  build.cpp  getGitInfo.cmake  git.cpp  git.h.in  git.hpp.in
lib/package/include/platform/package/: build.hpp  git.hpp
lib/toolchain/: coverage.cmake  setup.cmake
lib/toolchain/baremetal-arm/: arm-none-eabi-clang.cmake  arm-none-eabi-gcc.cmake
lib/toolchain/freertos-arm/: arm-none-eabi-clang.cmake  arm-none-eabi-gcc.cmake
lib/toolchain/linux/: aarch64-linux-gnu-gcc.cmake  aarch64-none-linux-gnu-clang-14.cmake  aarch64-none-linux-gnu-clang-18.cmake  aarch64-none-linux-gnu-clang-22.cmake  aarch64-none-linux-gnu-clang.cmake  aarch64-none-linux-gnu-gcc.cmake  clang-14.cmake  clang-18.cmake  clang-22.cmake  clang.cmake  coverage.cmake  gcc-11.cmake  gcc-13.cmake  gcc-15.cmake  gcc.cmake  sanitizers.cmake  toolchain.cmake
tools/: adjust-compilation-db.py  check-clang-tidy.sh
tools/ci/: logs-reader.py  program-openocd.py  program-stm32f4discovery.py
